--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,3 +1,3 @@
-title: Course-in-a-Box
-description: An open-source project for creating online courses, built by <a href="https://www.p2pu.org">P2PU</a>
+title: Staying Safe on the Internet
+description: Un curso para aprender a usar herramientas que ayuden a mantener la seguridad y la privacidad mientras navegas en Internet.
 modules: [setup, content, customize]
