--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,3 +1,3 @@
 title: Staying Safe on the Internet
 description: Un curso para aprender a usar herramientas que ayuden a mantener la seguridad y la privacidad mientras navegas en Internet.
-modules: [La_importancia_de_nuestros_datos, Como_nos_rastrean_en_internet, Evitando_los_trackers, Datos_en_Poder_de_las_Empresas, {modulo prueba}, [modulo prueba2]]
+modules: [[La importancia de nuestros datos], [Como nos rastrean en internet], [Evitando los trackers], [Datos en poder de las empresas]]
