--- a/_config.yml
+++ b/_config.yml
@@ -32,4 +32,4 @@ prose:
 jumbotron_color: "#58D7CB"
 jumbotron_image: "img/jumbotron_image.png"
 # jumbotron_mask: "img/jumbotron-mask.svg"
-jumbotron_icon: "img/newlogo.png"
+# jumbotron_icon: "img/newlogo.png"
