--- a/_data/course.yml
+++ b/_data/course.yml
@@ -1,1 +1,1 @@
-modules: [[La importancia de nuestros datos], Como_nos_rastrean_en_internet, Evitando_los_trackers, Datos_en_poder_de_las_empresas]
+modules: [La_importancia_de_nuestros_datos, Como_nos_rastrean_en_internet, Evitando_los_trackers, Datos_en_poder_de_las_empresas]
